updated slider and header menu

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -3718,7 +3718,6 @@
           "1580491297715"
         ],
         "settings": {
-          "header_slideshow_enabled": true,
           "visible_on_mobile": true,
           "slider_placement": "full-width",
           "slider_auto": true,
@@ -5469,16 +5468,128 @@
       },
       "header": {
         "type": "header",
+        "blocks": {
+          "1585247552561": {
+            "type": "menu_parent",
+            "settings": {
+              "mi_text": "{MAIN}Home",
+              "mi_url": "https:\/\/iamretro.com",
+              "mi_class": "",
+              "mi_mobile": true,
+              "mi_pos_right": false,
+              "mi_icon_enabled": false,
+              "mi_icon": "",
+              "mmenu_label_text_color": "#1349b2",
+              "mmenu_label_bg_color": "rgba(0,0,0,0)",
+              "mi_submenu_w": "100%",
+              "mi_submenu_padding": 30,
+              "mi_submenu_bg_c": "",
+              "mi_submenu_bg": "",
+              "mi_submenu_bg_pos": "top_right",
+              "mi_submenu_bg_repeat": "no-repeat"
+            }
+          }
+        },
+        "block_order": [
+          "1585247552561"
+        ],
         "settings": {
+          "mmenu_orientation": "0",
+          "mmenu_static_vertical": false,
+          "mmenu_static_vertical_height": "250",
+          "mmenu_center": false,
+          "mmenu_submenu_appear": "0",
+          "mmenu_navigation_text": "",
+          "mmenu_new_window": false,
+          "mmenu_searchbar": false,
+          "mmenu_home_icon": false,
           "mobile_menu": true,
-          "mb_linklist": "main-menu",
+          "mb_menu": "main-menu",
           "bg_color": "",
           "content_color": "",
-          "border_color": ""
+          "border_color": "",
+          "mmenu_content": "0",
+          "mmenu_links": "",
+          "mmenu_links_w": "",
+          "mmenu_animation_type": "none",
+          "mmenu_animation_time": "200"
+        }
+      },
+      "1585246966447": {
+        "type": "header-slideshow",
+        "blocks": {
+          "1585246966447-0": {
+            "type": "image",
+            "settings": {
+              "slide_img_use": true,
+              "slide_img": "shopify:\/\/shop_images\/Iamretro-Site-Redesign-Quiccs-Real-Banner_f8f70955-ebb6-4c61-896c-64f0886a274c.jpg",
+              "slide_vid": "",
+              "slide_head": "",
+              "slide_capt": "",
+              "slide_cta": "SHOP NOW",
+              "slide_url": "shopify:\/\/collections\/quiccs",
+              "slide_swap": true,
+              "slide_cta_btw": false,
+              "slide_cta_undrline": false,
+              "slide_head_size": 40,
+              "slide_head_weight": 600,
+              "slide_head_color": "#000000",
+              "slide_head_bodyfont": false,
+              "slide_head_space": false,
+              "slide_head_decor": "0",
+              "slide_capt_size": 20,
+              "slide_capt_weight": 300,
+              "slide_capt_color": "#000000",
+              "slide_capt_decor": "0",
+              "slide_align_hori": "center",
+              "slide_align_vert": "bottom",
+              "slide_align_content": "center",
+              "slide_padding_from_hori": "right",
+              "slide_padding_hori": 0,
+              "slide_padding_from_vert": "top",
+              "slide_padding_vert": 0,
+              "slide_sticker_enabled": true,
+              "slide_sticker": ""
+            }
+          }
+        },
+        "block_order": [
+          "1585246966447-0"
+        ],
+        "settings": {
+          "visible_on_mobile": true,
+          "slider_placement": "full-width",
+          "slider_auto": true,
+          "slider_interval": "5000",
+          "slider_align_top": false,
+          "slider_margintop": "",
+          "slider_scale": true,
+          "slider_height": "600",
+          "slider_auto_height": true,
+          "slider_mask": false,
+          "slider_mask_color": "#f20303",
+          "slider_mask_opacity": 0.2,
+          "slider_nav_icon_color": "#f20303",
+          "slider_nav_bg_color": "",
+          "slider_nav_border_color": "",
+          "slider_navhvr_icon_color": "#000000",
+          "slider_navhvr_bg_color": "",
+          "slider_navhvr_border_color": "",
+          "slider_absolute_bg_enabled": false,
+          "slider_absolute_bg": "",
+          "slider_afx_head": "fadeInRight",
+          "slider_afx_cap": "fadeIn",
+          "slider_afx_cta": "fadeIn",
+          "slider_afx_sticker": "fadeIn",
+          "slider_dfx_head": "bounceOutLeft",
+          "slider_dfx_cap": "bounceOut",
+          "slider_dfx_cta": "bounceOut",
+          "slider_dfx_sticker": "bounceOut"
         }
       }
     },
     "content_for_index": [
+      "1585246966447",
       "1527420245567",
       "1527253564785",
       "1527311177344",
